force-app/main/default/objects/Nav_Export__c/Nav_Export__c.object-meta.xml
<CustomObject>
    <label>Nav Export</label>
    <nameField>
        <displayFormat>NAV-{0000000}</displayFormat>
        <label>Nav Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nav Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>