force-app/main/default/objects/Nav_Export__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <label>Account No.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>