force-app/main/default/objects/Nav_Export__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>