force-app/main/default/objects/Nav_Export__c/fields/Costcentre_Code__c.field-meta.xml
<CustomField>
    <fullName>Costcentre_Code__c</fullName>
    <label>Costcentre Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>